--- a/Roteiro0/Roteiro0/CMakeLists.txt
+++ b/Roteiro0/Roteiro0/CMakeLists.txt
@@ -1,4 +1,4 @@
-# cmake_minimum_required(VERSION <specify CMake version here>)
+cmake_minimum_required(VERSION 3.14)
 project(Roteiro0 C)
 
 set(CMAKE_C_STANDARD 11)
@@ -6,4 +6,4 @@ set(CMAKE_C_STANDARD 11)
 include_directories(.)
 
 add_executable(Roteiro0
-        main.c Quadrado.c Soma.c Fatorial.c)
+        main.c)
